initial styling of input & labels in individual tracker view; need to fix spacing & alignment

--- a/public/app.css
+++ b/public/app.css
@@ -97,7 +97,8 @@ h2 {
 
 .tracker-container {
   flex-grow: 1;
-  max-width: 800px;
+  /* flex-basis: 50%; */
+  /* max-width: 800px; */
   margin: 5px;
   padding: 10px;
   border: 1.5px solid #ffd54f;
@@ -131,7 +132,7 @@ h2 {
 }
 
 .marks-container {
-  /* max-width: 75%; */
+  /* max-width: 50%; */
   min-height: 35px;
   padding: 5px;
 }
@@ -154,25 +155,37 @@ ul {
   background-color: #aed581;
 }
 
+.edit-trkr-label {
+  display: block;
+  /* width: 100% */
+}
+
+.edit-trkr-field {
+  margin: 0 auto;
+  height: auto;
+  width: 95%; 
+  padding: 5px;
+  border: 1px solid #7da453;;
+  border-radius: 3px;
+} 
+
 .notes-container {
   display: flex;
   flex-direction: column;
+  align-content: center;
   padding: 5px;
 }
-/* add .description-container for flex box if add box back */
 
-/* Add this back if add description edit in summary
-.existing-trkr-desc {
-  border: 1px solid #7da453;;
-  border-radius: 3px;
-} */
+.notes {
+  text-align: center;
+}
 
 .trkr-sumry-notes {
   resize: none;
   margin: 0 auto;
-  width: 90%;
+  width: 95%;
   height: 100px;
-  border: 1px solid #7da453;;
+  border: 1px solid #7da453;
   border-radius: 3px;
   padding: 5px;
 }
@@ -230,21 +243,12 @@ fieldset {
   margin: 0 auto;
 }
 
-legend {
-  width: 100%;
-  font-size: 1.25em;
-  text-align: center;
-  margin: 0 auto 1em;
-  /* background-color: #eceff1; */
-}
-
-label {
+.new-trkr-label {
   font-size: 18px;
-  text-align: center;
+  /* text-align: center; */
 }
 
-input {
-  /* display: block; */
+.new-trkr-input {
   width: 100%;
   height: auto;
   font-size: 20px;
@@ -257,7 +261,7 @@ input {
   transition: opacity 0.4s;
 }
 
-input:focus {
+.new-trkr-input:focus {
   border: 3px solid #62efff;
 }
 
@@ -281,13 +285,14 @@ input:focus {
 
 button {
   height: auto;
+  margin-right: 5px;
   font-size: 18px;
   text-align: center;
   background: #ffffff;
   border: 0;
   border-radius: 3px;
   cursor: pointer;
-  margin-right: 5px;
+
 }
 
 .footer {
